# pinger

./: .gitignore  LICENSE  README.md  about.cpp  about.h  about.ui  changelog.md  clickablelabel.cpp  clickablelabel.h  functions.cpp  functions.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pingdata.cpp  pingdata.h  pinger.pro  reses.qrc  settings.ui
.github/: FUNDING.yml
_docs/: links.txt  logos.sketch  pinger-logo.graffle  pinger.sketch
_docs/pinger.app/Contents/: Info.plist
_docs/pinger.app/Contents/MacOS/: Principle Viewer
_docs/pinger.app/Contents/Resources/: Assets.car  pinger.prd
pinger-quick/: CMakeLists.txt  DialogButton.qml  DialogSwitch.qml  DialogText.qml  FormLabel.qml  FormLabelHeader.qml  FormText.qml  FormTextWithHover.qml  HalfRounded.qml  HalfRoundedButton.qml  IconButton.qml  LayoutHorizontal.qml  LayoutRegion.qml  LayoutVertical.qml  MessageBox.qml  WindowDialog.qml  WindowMessage.qml  backend.cpp  backend.h  functions.cpp  functions.h  main.cpp  main.qml  pingdata.cpp  pingdata.h  pinger-quick.pro  pinger.icns  qml.qrc  qmldir  styles.qml
pinger-widgets/: about.cpp  about.h  about.ui  mainwindow.ui  pingdata.cpp  pinger.pro  settings.ui
src/: CMakeLists.txt  CMakePresets.json  DialogButton.qml  DialogSwitch.qml  DialogText.qml  FormLabel.qml  FormLabelHeader.qml  FormText.qml  FormTextWithHover.qml  HalfRounded.qml  HalfRoundedButton.qml  IconButton.qml  LayoutRegion.qml  WindowDialog.qml  WindowMessage.qml  backend.cpp  backend.h  clipboardproxy.cpp  clipboardproxy.h  functions.cpp  functions.h  main.cpp  main.qml  pingdata.cpp  pingdata.h  qml.qrc  qmldir  resources.rc  styles.qml
src/cmake/: FindFFmpeg.cmake  GenerateVersion.cmake
